# cg-gnn

./: .gitignore  Dockerfile  README.md  a_generate_graphs.py  a_spt_to_file.py  b2_infer.py  b_generate_graphs.py  b_train_gnn.py  c1_find_importance.py  c2_infer.py  c2_make_interactives.py  c3_find_separability.py  c4_merge_importances.py  c_explain.py  c_train_gnn.py  cuda.dockerfile  d1_find_importance.py  d2_make_interactives.py  d3_find_separability.py  d4_merge_importances.py  d_explain.py  env_hactnet_hpc.yml  env_spt_csv.yml  environment.yml  environment_full.yml  environment_hactnet_hpc5.yml  environment_histocartography_hpc.yml  main.py  pyproject.toml  spt_helper.py  test_hovernet.py  test_stain_normalizer.py
cggnn/: __init__.py  generate_graph_from_spt.py  generate_graphs.py  importance.py  run.py  run_all.py  separability.py  spt_to_df.py  train.py
cggnn/explain/: __init__.py  explain.py  importance.py  plot_interactives.py  separability.py  specimen_importance.py
cggnn/scripts/: separability.py  train.py
cggnn/util/: __init__.py  constants.py  pipeline.py  util.py
cggnns/: generate_graph_from_spt.py  run_all.py  spt_to_df.py  train.py
cggnns/explain/: __init__.py  explain.py  importance.py  plot_interactives.py  separability.py  specimen_importance.py
cggnns/util/: __init__.py  constants.py  pipeline.py  util.py
config/: bracs_hact_7_classes_pna.yml
core/: generate_graph_from_spt.py  generate_hact_graph_test.sh  generate_hact_graph_train.sh  generate_hact_graph_val.sh  generate_hact_graphs.ipynb  generate_hact_graphs.py  generate_hact_graphs_no_normalization.py  inference.py  inference.sh  inference2.sh  readme.md  spt_to_csv.py  test_model.py  train.py  train.sh  train_cell_graph.sh
core/04ad8cb1-99ca-4b9e-a32a-0261b2508311/: model_best_val_loss.pt  model_best_val_weighted_f1_score.pt
core/140bf5bd-496f-4916-a23d-11124cfc629c/: model_best_val_loss.pt  model_best_val_weighted_f1_score.pt
core/2a9ed1b1-aab3-4f32-bdc6-91bd0a066eab/: classification_report.txt  model_best_val_accuracy.pt
core/5a9c88a9-4e70-4657-b7ab-9cde591cdf95/: model_best_val_accuracy.pt
core/863e5f5f-996d-4444-8ffd-65deb0fb7597/: model_best_val_accuracy.pt
core/config/: bracs_tggnn_7_classes_pna.yml  melanoma_cggnn.yml
data/hact-net-data-v1/: about.txt
data/hact-net-data-v2/: about.txt
data/hact-net-data-v3/: about.txt
data/hact-net-data-v4/: about.txt
data/hact-net-data-v5/: about.txt
hact-net/: dataloader.py  train.py
hactnet/: explain.py  generate_graph_from_spt.py  inference.py  run_all.py  spt_to_csv.py  spt_to_df.py  spt_to_file.py  train.py  util.py
hactnet/explain/: __init__.py  explain.py  importance.py  plot_interactives.py  separability.py  specimen_importance.py
scripts/: separability_scores.py  train_gnn_and_find_importance.py
shell_scripts/: generate_graph_from_spt.sh  generate_hact_graph_test.sh  generate_hact_graph_train.sh  generate_hact_graph_val.sh  inference.sh  train.sh  train_cell_graph.sh  train_melanoma_cell_graph.sh  train_tissue_graph.sh
test/: test_hovernet.py  test_model.py  test_stain_normalizer.py  train.ipynb
(+144 files in other folders)
